# drone_object_tracker_ros

./: .gitignore  ARCHITECTURE.md  AUTONOMY_GATING.md  DASHBOARD.md  DIAGNOSTICS.md  MAVSDK_COMMAND_BRIDGE.md  MISSION_DISTANCE_UPGRADE.md  POSITION_HOLD_YAW_CHANGELOG.md  README.md  requirements.txt
models/red_ball_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/drone_bringup/: CMakeLists.txt  package.xml  setup.py
src/drone_bringup/config/: full_system_params.yaml  full_system_params.yaml.backup_ncnn  simulation_params.yaml  vision_params.yaml  vision_params.yaml.backup_ncnn
src/drone_bringup/launch/: full_system_launch.py  simulation_launch.py  sitl_orbit_launch.py  vision_launch.py  vision_launch.py.backup_fake_telemetry
src/drone_camera/: package.xml
src/drone_camera/drone_camera/: camera_node.py
src/drone_control/: package.xml  setup.py
src/drone_control/drone_control/: autonomy_manager_node.py  control_node.py  control_node.py.bak_control_loop  mission_executor_node.py
src/drone_dashboard/: package.xml  setup.cfg  setup.py
src/drone_dashboard/drone_dashboard/: dashboard_node.py  dashboard_node.py.backup_flip_x
src/drone_diagnostics/drone_diagnostics/: health_monitor_node.py
src/drone_fake/: package.xml  setup.cfg  setup.py
src/drone_fake/drone_fake/: __init__.py  fake_camera_node.py  (+2 more)
src/drone_interfaces/: CMakeLists.txt
src/drone_telemetry/: package.xml  setup.py
src/drone_tracker/: package.xml
src/drone_visualizer/: package.xml  setup.cfg  setup.py
src/drone_yolo/: package.xml  setup.cfg  setup.py
(+12 files in other folders)
