<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for the drone vision system</description>
  <maintainer email="drone@roche.com">Drone Vision Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>drone_interfaces</exec_depend>
  <exec_depend>drone_camera</exec_depend>
  <exec_depend>drone_yolo</exec_depend>
  <exec_depend>drone_tracker</exec_depend>
  <exec_depend>drone_telemetry</exec_depend>
  <exec_depend>drone_control</exec_depend>
  <exec_depend>drone_visualizer</exec_depend>
  <exec_depend>drone_fake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>